[tool.poetry]
name = "repl_python3_discordbot24hor"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
chess = "^1.9.4"
googletrans = "^3.0.0"
discord = "^2.1.0"
"discord.py" = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
